--- a/src/not_found.html
+++ b/src/not_found.html
@@ -1,45 +1,30 @@
 ---
-title: blooming on the moon
+title: where have you gone?
+layout: page_base.njk
 permalink: not_found.html
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+<div id="layout">
+  <div id="banner">
+    <div id="bannertextorimage"></div>
+  </div>
 
-<head>
-  <title>blooming on the moon</title>
-  <link rel="icon" href="/graphics/favicon.gif" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles/main-style.css" type="text/css">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-</head>
-
-<body>
-  <div id="layout">
-    <div id="banner">
-      <div id="bannertextorimage"></div>
+  <div id="content404">
+    <div id="contentbox">
+      <div class="small-title"><img src="/graphics/bflower.png" alt="x" style="margin-left:2px;"> hmm?</div>
+      <center>
+        <p>little traveler, have you lost your way?</p>
+        <p>here, take my hand. <a href="https://lunarlily.neocities.org/">let's go home together.</a></p>
+      </center>
     </div>
+  </div>
 
-
-    <div id="content404">
-      <div id="contentbox">
-        <div class="small-title"><img src="/graphics/bflower.png" alt="x" style="margin-left:2px;"> hmm?</div>
-        <center>
-          <p>little traveler, have you lost your way?</p>
-          <p>here, take my hand. <a href="https://lunarlily.neocities.org/">let's go home together.</a></p>
-        </center>
-      </div>
+  <div id="footer">
+    <div id="footerbox">
+      <div id="footertext"></div>
     </div>
+  </div>
 
-    <div id="footer">
-      <div id="footerbox">
-        <div id="footertext"></div>
-      </div>
-    </div>
-
-    <script src="/scripts/tagsScript.js"></script>
-    <script src="/scripts/headerfooter.js"></script>
-</body>
-
-</html>
+  <script src="/scripts/tagsScript.js"></script>
+  <script src="/scripts/headerfooter.js"></script>
