--- a/src/totw-archive/index.html
+++ b/src/totw-archive/index.html
@@ -1,162 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: page_base.njk
+title: "Thing of the Week archive"
+---
 
-<head>
-  <title>blooming on the moon</title>
-  <link rel="icon" href="/graphics/favicon.gif" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles/main-style.css" type="text/css">
-  <link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS">
+<div class="left">
+    <section class="indigo">
+        <h3>The ghosts of the things of weeks past</h3>
+        <p>Wanna see some previous things of the week? You're in the right place! Entries are posted in reverse chronological order (a.k.a. most recent first). Sometime soon I need to figure out pagination so this doesn't become terrible to scroll through, but for now it's probably alright.</p>
+    </section>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-</head>
-
-<body>
-  <div id="layout">
-    <div id="banner">
-      <div id="bannertextorimage"></div>
-    </div>
-
-
-
-    <div id="navigationbar">
-      <div id="navigation"></div>
-    </div>
-
-
-
-    <div id="left">
-      <div id="leftbox">
-        <div id="featurebox">
-        </div>
-      </div>
-
-      <div id="leftbox">
-        <div id="currentlybox"></div>
-      </div>
-
-      <div id="leftbox">
-        <div id="linksbox"></div>
-      </div>
-
-      <div id="leftbox">
-        <div id="todobox"></div>
-      </div>
-    </div>
-
-
-
-    <div id="content">
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> archive of things of the week</div>
-        Wanna see some previous things of the week? You're in the right place!
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of October 12, 2025 (posted 10/16)</div>
-        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/Xx1TnVObQ0k?si=dl68StSQt91Wkuho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <section class="indigo">
+        <h3>But wait, what's a thing of the week?</h3>
         <p>
-          Really good song, really good Miku design. PinocchioP never misses I fear... my kingdom for a <a href="https://www.karasu.utau.us/" target="_blank">Karasu</a> cover (please) (can anyone hear me) (floating away)
+            Great question! A thing of the week is some Thing I'm particularly fixated on during any given week - there's really no restriction on what the Thing can be. I thought it would be a fun way to document how my interests fluctuate over time and also encourage me to regularly check/update the site when I first launched it.
         </p>
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of October 5, 2025 (posted 10/9)</div>
-        <img src="/graphics/totw/pleh.jpg" alt="A picture of a grey bunny flopped over on its side captioned 'so tired.... pleh....'" width="380">
-        <p>
-          Filed under images that have done inexplicable and irreparable damage to my lexicon. I can't stop saying it... pleh....
+        <p class="subtletext">
+            *Note: Contrary to expectations set by the name, the thing of the week is usually not updated every single week but rather when I remember or have the time/energy to. Life be happening sometimes, yknow?
         </p>
-      </div>
+    </section>
+</div>
 
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of September 21, 2025 (posted 9/25)</div>
-        <img src="/graphics/totw/sosgb_logo.png" alt="The logo for Story of Seasons: Grand Bazaar" width="380">
-        <p>
-          Back on my farm game shit again lads (no one was surprised)<br><br>
-          I never played the original DS version of GB so I went into it basically blind and I'm having a blast!! My save file is already over 40 hours and I'm not even halfway through year 1 autumn yet, which is wild to me? There's soooo much to do. I wasn't sure if I'd like the bazaar replacing the traditional shipping bin, but I'm slowly figuring out how to put the windmills to good use every week. Balancing between making stuff for the bazaar and more long-term crafting like seed making and building materials is fun, and I <i>really</i> like that the seasonal trends encourage you to focus on more than just growing crops with the best gold-per-day return every month - it's a very refreshing twist on the usual formula, and I think it'll make playing long-term much more enjoyable. Though on the other hand, it kinda sucks to get a bad combo of trends for a season lol<br><br>
-          Going in blind included not knowing anything about everyone in town. Usually I don't mind reading or watching stuff about characters beforehand in a farm sim (it's part of the fun of anticipating a new game imo), but I felt like trying something new this time. I was curious how I'd like getting to know the townspeople organically - so far, very glad I gave it a shot! I've been pleasantly surprised several times in heart events as I get closer to everyone. The voice acting is incredibly well done too. I adore every performance but Mayor Felix is my favorite, you can tell he's having a great time in the booth :]<br><br>
-          I could keep yapping for ages and I want to, so look forward to a journal entry at some point in the future when I'm farther into the game. In the meantime, look at my cat. She's so long.
-        </p>
-        <img src="/graphics/totw/sosgb_longcat.jpg" alt="My farmer holding their pet cat under her front arms, with the rest of her body stretched out very long" width="380">
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of August 31, 2025 (posted 9/5)</div>
-        <img src="/graphics/totw/sunnyD.jpeg" alt="A 1 gallon container of Sunny D, smooth orange flavor" width="380">
-        <p>
-          Been on a real Sunny D kick recently, I'm actually drinking a glass as we speak. I have no idea why? The last time I had any was proooooobably in high school, but I saw a big ol jug at Winco last week and it spoke to something deep in my soul so I stuck it in the cart. Smooth Orange is supreme obviously (I'll confess I was a Tangy Original truther as a tot but I think it's too acidic for me now. I'm so susceptible to heartburn. God. I need to buy more Tums.)
-        </p>
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of July 13, 2025 (posted 7/16)</div>
-        <a href="https://murdle.com/index.html" target="_blank"><img src="https://murdle.com/murdle-ranger-mustache.png" alt="Murdle" width="380"></a>
-        <p>
-          A friend recently introduced me to <a href="https://murdle.com/index.html" target="_blank">Murdle</a>, a daily puzzle solving game in the style of others like <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank">Wordle</a> and <a href="https://globle-game.com/game" target="_blank">Globle</a> and <a href="https://costcodle.com/" target="_blank">Costcodle</a>. I'm a big puzzle guy so I added it into my daily rotation immediately lol
-        </p>
-        <p>
-          The game itself is about logical process of elimination - first you go through each clue and use the grid to mark down the facts, then use your deduction skills to fill in the rest of the squares based on what you know is true/false and figure out whodunit. Some days the puzzle will have more categories to keep track of, like motives and suspect statements, while other days will just be the who-what-where wombo combo.
-        </p>
-        <p>
-          It's pretty straightforward but it just really scratches the puzzle itch for me, to the point that I bought a couple of the physical books and I've been chewing through them every night. The four category puzzles drive me nuts in the most fun way possible.
-        </p>
-        <p>
-          If you're someone who likes stretching your brain a bit every day (and honestly even if you aren't!), I heartily recommend giving it a try :]
-        </p>
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of June 29, 2025 (posted 7/3)</div>
-        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/0iVlSNpq8i8?si=XQkb77f1g8tesI_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>
-          I caught the live premiere completely by accident and haven't taken it off repeat since. Eternally grateful to my boyfriend for recently turning me on to Jamie's songs, I really love how she tunes Teto!
-        </p>
-      </div>
-    </div>
-
-
-
-    <div id="right">
-      <div id="rightbox">
-        <div id="statusbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="counterbox">
-        </div>
-      </div>      
-
-      <div id="rightbox">
-        <div id="webringsbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="linkbackbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="rssbox"></div>
-      </div>
-    </div>
-
-
-
-    <div id="footer">
-      <div id="footerbox">
-        <div id="footertext"></div>
-      </div>
-    </div>
-
-
-
-  </div>
-
-
-  <script src="/scripts/tagsScript.js"></script>
-  <script src="/scripts/headerfooter.js"></script>
-  <script src="/scripts/sidebars.js"></script>
-  <script src="/scripts/widgets.js"></script>
-  <script src="https://status.cafe/current-status.js?name=luna" defer></script>
-</body>
-
-</html>
+<div class="right">
+    {% for entry in totwarchive %}
+    <section class="{{ entry.color }}">
+        <h3 class="titlemargin">Week of {{ entry.week }}: {{ entry.thing }}</h3>
+        <p class="subtletext pmargin">Posted on {{ entry.posted }}</p>
+        {{ entry.content }}
+    </section>
+    {% endfor %}
+</div>
