--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,202 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: page_base.njk
+title: "about me!"
+---
+<div class="left">
+    <section class="orange">
+        <h3>Here, have a fun fact:</h3>
+        <p>I played the piano and clarinet when I was a kid! I still have my clarinet actually... maybe someday I can take lessons again.</p>
+    </section>
 
-<head>
-  <title>blooming on the moon</title>
-  <link rel="icon" href="/graphics/favicon.gif" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles/main-style.css" type="text/css">
-  <link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS">
+    <section class="blue">
+        {% include "partials/statuscafe.njk" %}
+    </section>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-</head>
+    <section class="yellow">
+        {% include "partials/linkback.njk" %}
+    </section>
+</div>
 
-
-
-<body>
-  <div id="layout">
-    <div id="banner">
-      <div id="bannertextorimage"></div>
-    </div>
-
-
-
-    <div id="navigationbar">
-      <div id="navigation"></div>
-    </div>
-
-
-
-    <div id="left">
-      <div id="leftbox">
-        <div id="featurebox">
-        </div>
-      </div>
-
-      <div id="leftbox">
-        <div id="currentlybox"></div>
-      </div>
-
-      <div id="leftbox">
-        <div id="linksbox"></div>
-      </div>
-
-      <div id="leftbox">
-        <div id="todobox"></div>
-      </div>
-    </div>
-
-
-
-    <div id="content">
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> hi there!</div>
+<div class="right">
+    <section class="purple">
+        <h2>Hello there, fellow explorers!</h2>
         <p>
-          I'm Luna, the webmaster of lunarlily. I use they/them pronouns, and I'm in my late 20s. Nice to meet you!
+            I'm <strong>Luna</strong>, the webmaster of lunarlily. I use <em>they/them</em> pronouns, and I'm in my late 20s. I love bunnies and studying the stars. Nice to meet you!
         </p>
         <p>
-          After some encouragement from <a href="https://nightmarefish.neocities.org/">a friend,</a> I sat down to make this little place a reality. I'm not sure what it's going to be exactly, beyond somewhere that I can collect the things I like and maybe even my thoughts about them, but I'm looking forward to watching it evolve over time. Who knows what the future holds?
+            After some encouragement from <a href="https://nightmarefish.neocities.org/">a friend,</a> I sat down to make this little place a reality. I'm not sure what it's going to be exactly, beyond somewhere that I can collect the things I like and maybe even my thoughts about them, but I'm looking forward to watching it evolve over time. Who knows what the future holds?
         </p>
         <p>
-          I'm a bit shy but you're always welcome to <a href="mailto:bunflora@proton.me">drop me an email</a> or leave a message in the guestbook.
+            I'm a bit shy but you're always welcome to <a href="mailto:bunflora@proton.me">drop me an email</a> or leave a message in the guestbook.
         </p>
-      </div>
+    </section>
 
-      <div id="contentbox">
-        <table id="Table">
-            <thead>
-              <tr>
-                <th><img src="/graphics/bflower.png" alt="x"> things i like</th>
-                <th><img src="/graphics/bflower.png" alt="x"> things i don't like</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <ul style="margin: 0;">
-                    <li>ice cold grapes</li>
-                    <li>taking naps</li>
-                    <li>logic puzzles</li>
-                    <li>yapping about ocs</li>
-                    <li>bunnies</li>
-                    <li>astronomy</li>
-                    <li>laughing with my friends</li>
-                    <li>reading books in a single sitting</li>
-                  </ul>
-                </td>
-                <td valign="top">
-                  <ul style="margin: 0;">
-                    <li>hot drinks</li>
-                    <li>waking up early</li>
-                    <li>filing taxes</li>
-                    <li>bitter things</li>
-                    <li>bitter people</li>
-                    <li>bugs...</li>
-                    <li>remembering i exist after reading books in a single sitting</li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody>
-        </table>
-      </div>
+    <div class="right-inside">
+        <section class="green">
+            <h3>Things I like</h3>
+            <ul>
+                <li>ice cold grapes</li>
+                <li>taking naps</li>
+                <li>logic puzzles</li>
+                <li>yapping about ocs</li>
+                <li>bunnies</li>
+                <li>astronomy</li>
+                <li>laughing with my friends</li>
+                <li>reading books in a single sitting</li>
+            </ul>
+        </section>
 
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px;"> a <span style="font-size: 12px;">(non-exhaustive)</span> list of favorites</div>
+        <section class="red">
+            <h3>Things I don't like</h3>
+            <ul>
+                <li>hot drinks</li>
+                <li>waking up early</li>
+                <li>filing taxes</li>
+                <li>bitter things</li>
+                <li>bitter people</li>
+                <li>bugs...</li>
+                <li>remembering i exist after reading books in a single sitting</li>
+            </ul>
+        </section>
+    </div>
+
+    <section class="orange">
+        <h3>A <span class="subtletext">(non-exhaustive)</span> list of favorites</h3>
         <p><strong>foods:</strong> mashed potatoes, sandwiches, chocolate chip cookies, zucchini, honey roasted cashews, orange creme savers, pancakes, strawberry lemonade, most fruits (other than melons)</p>
         <p><strong>games:</strong> Fantasy Life, Metaphor: ReFantazio, Gravity Rush, Kingdom Hearts II, Bravely Default, Rune Factory 4, Deltarune, Code: Realize, Pokemon BW, Zero Escape</p>
-        <p><strong>books:</strong> The Starless Sea (Erin Morgenstern), The Locked Tomb series (Tamsyn Muir), Spitfire (Maya Kern), Sabriel (Garth Nix), Mistborn: Second Era (Brandon Sanderson), The Tale of Despereaux (Kate DiCamillo)</p>
-        <p><strong>anime:</strong> A Sign of Affection, Trigun Stampede, Mobile Suit Gundam: The Witch from Mercury, Natsume's Book of Friends</p>
-        <p><strong>manga:</strong> Witch Hat Atelier, Cardcaptor Sakura, Yotsuba!, Soul Eater, Hanamonogatari, No.6, Frieren</p>
+        <p><strong>books:</strong> The Starless Sea (Erin Morgenstern), The Locked Tomb series (Tamsyn Muir), Swordheart (T. Kingfisher), Sabriel (Garth Nix), Blood Over Bright Haven (M.L. Wang), The Tale of Despereaux (Kate DiCamillo)</p>
+        <p><strong>anime:</strong> A Sign of Affection, Trigun Stampede + Stargaze, Mobile Suit Gundam: The Witch from Mercury, Natsume's Book of Friends</p>
+        <p><strong>manga:</strong> Witch Hat Atelier, Cardcaptor Sakura, Yotsuba!, Soul Eater, Hanamonogatari, No.6, Frieren, Spacewalking with You</p>
         <p><strong>colors:</strong> purple and orange</p>
         <p><strong>time of day:</strong> 5:45pm</p>
         <p><strong>stationery:</strong> Sarasa 0.5mm gel pens, Takeda Jimuki Kyo-Iro inks (<i>Soft Snow of Ohara</i> in particular), Bande washi tape sticker rolls, Tombow Mono adhesive tape runner</p>
         <p><strong>sounds:</strong> my cat's meows, windchimes, Bangboo ehn-nas, PS2 start-up sound, shuffling cards, afternoon rainshowers, pikmin when you pluck them</p>
-      </div>
+    </section>
 
-      <div id="contentbox">
-        <table id="Table">
-            <thead>
-              <tr>
-                <th><img src="/graphics/bflower.png" alt="x"> trackers of things</th>
-                <th><img src="/graphics/bflower.png" alt="x"> friend codes</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Updated whenever I remember to :]</td>
-                <td>Feel free to leave yours in the guestbook if you'd like!</td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  <ul style="margin: 0;">
-                    <li><a href="https://anilist.co/user/bunflora/">anime & manga</a></li>
-                    <li><a href="https://app.thestorygraph.com/profile/wayfinders">books</a></li>
-                    <li><a href="https://backloggd.com/u/momokupo/">video games</a></li>
-                    <li><a href="https://boardgamegeek.com/collection/user/bunflora">board games</a></li>
-                    <li><a href="https://myfigurecollection.net/profile/aerina">figures</a></li>
-                    <li><a href="https://www.last.fm/user/eleventhcircle">music</a></li>
-                  </ul>
-                </td>
-                <td valign="top">
-                  <ul style="margin: 0;">
-                    <li><strong>3DS:</strong> adding later</li>
-                    <li><strong>Switch:</strong> 6984 4690 5693</li>
-                    <li><strong>Honkai Star Rail:</strong> 601733413</li>
-                    <li><strong>Zenless Zone Zero:</strong> 1002399764</li>
-                    <li><strong>Wuthering Waves:</strong> 501363046</li>
-                    <li><strong>Love & Deepspace:</strong> 82001281365</li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody>
-        </table>
-      </div>
+    <div class="right-inside">
+        <section class="yellow">
+            <h3>Trackers of things</h3>
+            <ul>
+                <li><a href="https://anilist.co/user/bunflora/">anime & manga (Anilist)</a></li>
+                <li><a href="https://app.thestorygraph.com/profile/wayfinders">books (Storygraph)</a></li>
+                <li><a href="https://backloggd.com/u/momokupo/">video games (Backloggd)</a></li>
+                <li><a href="https://boardgamegeek.com/collection/user/bunflora">board games (BGG)</a></li>
+                <li><a href="https://myfigurecollection.net/profile/aerina">figures (MFC)</a></li>
+                <li><a href="https://www.last.fm/user/eleventhcircle">music (last.fm)</a></li>
+            </ul>
+            <p class="subtletext">Updated whenever I remember to! Feel free to send me a friend request on any of these sites.</p>
+        </section>
+
+        <section class="blue">
+            <h3>Friend codes & connections</h3>
+            <p class="subtletext">Drop yours in the guestbook if you'd like :]</p>
+            <ul>
+                <li><strong>3DS:</strong> adding next time I charge it</li>
+                <li><strong>Switch:</strong> 6984 4690 5693</li>
+                <li><strong>Honkai Star Rail:</strong> 601733413</li>
+                <li><del><strong>Zenless Zone Zero:</strong> 1002399764</del> <span class="subtletext">Not actively playing right now</span></li>
+                <li><strong>Wuthering Waves:</strong> 501363046</li>
+                <li><strong>Arknights Endfield:</strong> 6949434829</li>
+            </ul>
+        </section>
     </div>
-
-
-
-    <div id="right">
-      <div id="rightbox">
-        <div id="statusbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="counterbox">
-        </div>
-      </div>
-
-
-      <div id="rightbox">
-        <div id="webringsbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="linkbackbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="rssbox"></div>
-      </div>
-    </div>
-
-
-
-    <div id="footer">
-      <div id="footerbox">
-        <div id="footertext"></div>
-      </div>
-    </div>
-
-
-
-  </div>
-
-
-  <script src="/scripts/tagsScript.js"></script>
-  <script src="/scripts/headerfooter.js"></script>
-  <script src="/scripts/sidebars.js"></script>
-  <script src="/scripts/widgets.js"></script>
-  <script src="https://status.cafe/current-status.js?name=luna" defer></script>
-</body>
-
-</html>
+</div>
