--- a/src/index.html
+++ b/src/index.html
@@ -1,164 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: page_base.njk
+title: blooming on the moon
+---
 
-<head>
-  <title>blooming on the moon</title>
-  <link rel="icon" href="/graphics/favicon.gif" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles/main-style.css" type="text/css">
-  <link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS">
+<div class="left">
+    <!-- what's new + RSS feed -->
+    <section class="red">
+        {% include "partials/latestupdates.njk" %}
+    </section>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-</head>
+    <!-- statuscafe -->
+    <section class="blue">
+        {% include "partials/statuscafe.njk" %}
+    </section>
 
+    <!-- currently -->
+    <section class="green">
+        {% include "partials/currently.njk" %}
+    </section>
 
+    <!-- link back -->
+    <section class="yellow">
+        {% include "partials/linkback.njk" %}
+    </section>
+</div>
 
-<body>
-
-  <div id="layout">
-    <div id="banner">
-      <div id="bannertextorimage"></div>
-    </div>
-
-
-
-    <div id="navigationbar">
-      <div id="navigation"></div>
-    </div>
-
-
-
-    <div id="left">
-      <div id="leftbox">
-        <div id="featurebox">
-        </div>
-      </div>
-
-      <div id="leftbox">
-        <div id="currentlybox"></div>
-      </div>
-
-      <div id="leftbox">
-        <div id="linksbox"></div>
-      </div>
-
-      <div id="leftbox">
-        <div id="todobox"></div>
-      </div>
-    </div>
-
-
-
-    <div id="content">
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> pardon the dust!</div>
+<div class="right">
+    <!-- welcome -->
+    <section class="purple">
+        <h2>Welcome to the fourth coolest site on the moon <span class="subtletext">(allegedly)</span></h2>
         <p>
-          Apologies for the recent quiet - I'm in the (very slow) process of giving lunarlily a redesign from the ground up. I don't have as much free time to put toward coding as I'd like after work these days, but it's still coming along well enough. This is my main focus for right now, so expect other site updates to be somewhat infrequent for a while longer!
+            I'm Luna, the webmaster of lunarlily! Thanks for stopping by :]
         </p>
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> welcome!</div>
         <p>
-          Thank you for stopping by! I'm glad you're here, and I hope you enjoy your stay :]
-          <br><br>
-          This website was built on a <strong>2560 x 1440</strong> screen, with <strong>desktop</strong> browsing in mind - while you should be able to browse on mobile, it is not fully responsive at this time. Please forgive me while I work on making everything mobile-friendly!
-          <br><br>
-          There isn't anything explicit on this site, but <strong>there will likely be swearing and occasional sexual/crude humor scattered around (especially in the journal)</strong>. Please keep this in mind, and if you're a minor please curate your space accordingly.
+            There isn't anything outright explicit on this site, but there will likely be swearing and occasional sexual/crude humor scattered around (especially in the journal). Please keep this in mind, and if you're a minor please curate your space accordingly.
         </p>
-      </div>
-
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> thing of the week</div>
         <p>
-          Every week (or more likely, when I remember to) I share something that I like or I'm currently into. Pretty much anything goes!
+            As with all personal sites, things are forever under construction and subject to change on a whim. If you come across anything broken (or that seems like it), feel free to drop an email or a message on the guestbook and I'll take a look!
         </p>
-        <br>  
-        <strong>Week of November 23, 2025 (posted 11/23)</strong>
-        <a href="https://shadolith.bandcamp.com/album/do-no-harm" target="_blank"><img src="/graphics/totw/donoharm.jpg" alt="The cover art for the album Do No Harm" width="380"></a>
-        I'll be honest, I haven't actually watched <a href="https://www.youtube.com/playlist?list=PL-QgmqAlQTgyitDyzrvySyHNCHw8_bJub" target="_blank">Snapcube's KH fandub</a> yet but these are bangers even outside of their original context. I think I'm ever so slightly partial to the ventricular mix.
-      </div>
+    </section>
 
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> nearby places of interest</div>
-        <center>
-          <p><i>Friends<br>(manifesting everyone making webbed sites... please...)</i></p>
-          <a href="https://nightmarefish.neocities.org/" target="_blank"><img src="/graphics/buttons/nightmarefish.png" alt="nightmarefish"></a>
-          <br><br>
-          <p><i>Neighbors</i></p>
-          <a href="https://zhongvie.neocities.org/" target="_blank"><img src="/graphics/buttons/zhongvie.gif" alt="zhongvie"></a>
-          <a href="https://yarnfish.neocities.org/" target="_blank"><img src="/graphics/buttons/yarnfish.gif" alt="yarnfish"></a>
-          <br><br>
-          <p><i>Sites I like & admire</i></p>
-          <a href="https://starry-knight.neocities.org/" target="_blank"><img src="https://starryknight06.github.io/neocities/public/images/button-starrys-grove.png" alt="Starry's Grove"></a> 
-          <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/assets/img/linkback.gif" alt="petrapixel"></a> 
-          <a href="https://aroceu.com/" target="_blank"><img src="/graphics/buttons/aroceu.png" alt="aroceu" height="31px" width="88px"></a>
-          <a href="https://nonkiru.art/" target="_blank"><img src="/graphics/buttons/nonkiru.gif" alt="nonkiru.art"></a>
-          <a href="https://deoxys.nekoweb.org/" target="_blank"><img src="https://deoxys.nekoweb.org/assets/button.png" alt="deoxys"></a>
-          <a href="https://lostletters.neocities.org/" target="_blank"><img src="/graphics/buttons/lostletters.gif" alt="lostletters"></a>
-          <a href="https://mariteaux.somnolescent.net/" target="_blank"><img src="/graphics/buttons/mariteaux.png" alt="mariteaux"></a>
-        </center>
-      </div>
-
-      <div id="contentbox" style="max-height: 150px; overflow-y: scroll;">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> changelog</div>
+    <!-- thing of the week -->
+    <section class="orange">
+        <h3>Thing of the Week</h3>
+        <h4 class="titlemargin">Week of February 1, 2026: Doomer by Tokyo Manaka</h4>
+        <p class="pmargin subtletext">Posted Feb 1, 2026</p>
+        <center><iframe width="80%" height="315" src="https://www.youtube.com/embed/YcO-MxPf_Vg?si=SQxNCvzpUWy1OnRM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
         <p>
-          <strong>23 November 2025:</strong> New TOTW, the exciting (and very belated!) first addition to the Neighbors section, and a little notice about ongoing site construction
-          <br><strong>16 October 2025:</strong> New journal entry yapping about library books + new TOTW
-          <br><strong>9 October 2025:</strong> new TOTW! working on several bigger things behind the scenes, life got busy for a bit so I have nothing to show yet but they're coming
-          <br><strong>25 September 2025:</strong> new TOTW, reorganized the archive to be in reverse chronological order (newest to oldest). a few housekeeping things too
-          <br><strong>11 September 2025:</strong> an RSS feed is born! subscribe from the sidebar!
-          <br><strong>5 September 2025:</strong> first journal post (hi, I'm not dead!)
-          <br><strong>16 July 2025:</strong> added some <a href="https://bootlegdomain.neocities.org/home" target="_blank">goofy ads</a> for world famous MMORPG Final Fantasy XIV, updated about page with a link to my new Anilist account
-          <br><strong>3 July 2025:</strong> jim she's alive (first deployment!)
+            My bestie <span class="subtletext">(if ur reading this hiii)</span> dropped this in my DMs back in early December, so I suppose this is technically a Thing of the Last 2 Months? I've had it on repeat constantly since then, it kept me company through many of the evenings I spent working on the site update. <span class="subtletext">Lo-fi beats to crash out over compile errors to or something idk</span>
         </p>
-      </div>
+        <p>
+            I like songs that make you feel like you're floating through the clouds <span class="subtletext">(or like that one gif of Goofy in the pool)</span> and Doomer hits that perfectly for me. This is the first song I've heard from Tokyo Manaka but I'm charmed by his sound, I want to listen through the rest of his releases soon. The MV is quite striking too! I spent a couple hours looking through <a href="https://www.pixiv.net/en/users/38480468">ohuton's pixiv archive</a> recently - I recommend taking a peek, their style is a lot of fun and they've even got a few manga you can read through.
+        </p>
+        <p>All of this to say: if you haven't already heard it, it's worth a listen :] <em>Lay back and dive~</em></p>
+        <p class="subtletext">Check out <a href="/totw-archive">the archive</a> for past things of the week!</p>
+    </section>
+
+    <div class="right-inside">
+        <!-- webrings -->
+        <section class="blue">
+            <h3>Webrings</h3>
+            <p class="subtletext">Here's where webrings would go... if I were in any. Stay tuned!</p>
+        </section>
+
+        <!-- cliques, clubs, fanlistings -->
+        <section class="green">
+            <h3>Cliques, clubs & fanlistings</h3>
+            <p class="subtletext">Here's where cliques, clubs, fanlistings would go... if I were in any. Stay tuned!</p>
+        </section>
     </div>
-
-
-
-
-    <div id="right">
-      <div id="rightbox">
-        <div id="statusbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="counterbox">
-        </div>
-      </div>
-
-      <div id="rightbox">
-        <div id="webringsbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="linkbackbox"></div>
-      </div>
-
-      <div id="rightbox">
-        <div id="rssbox"></div>
-      </div>
-    </div>
-
-
-
-    <div id="footer">
-      <div id="footerbox">
-        <div id="footertext"></div>
-      </div>
-    </div>
-
-
-
-  </div>
-
-
-  <script src="/scripts/tagsScript.js"></script>
-  <script src="/scripts/headerfooter.js"></script>
-  <script src="/scripts/sidebars.js"></script>
-  <script src="/scripts/widgets.js"></script>
-  <script src="https://status.cafe/current-status.js?name=luna" defer></script>
-</body>
-
-</html>
+</div>
