--- a/src/journal/index.html
+++ b/src/journal/index.html
@@ -1,54 +1,26 @@
-<!DOCTYPE html>
-<html lang="en" dir="auto">
-<head>
-  <title>blooming on the moon</title>
-  <link rel="icon" href="/graphics/favicon.gif" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles/main-style.css" type="text/css">
-  <link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS">
+---
+layout: page_base.njk
+title: journal index
+---
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-</head>
+<div class="left">
+    <!-- tags list -->
+     <section class="green">
+        {% include "partials/journaltags.njk" %}
+     </section>
+</div>
 
-<body>
-  <div id="layout">
-    <div id="banner">
-      <div id="bannertextorimage">
-      </div>
-    </div>
-
-
-
-    <div id="navigationbar">
-      <div id="navigation">
-      </div>
-    </div>
-
-
-
-    <div id="left">
-      <div id="leftbox">
-        <div class="small-title"><img src="/graphics/bflower.png" alt="x"> tags list</div>
-        <ul id="tag-index" style="list-style-type: none; padding-left: 10px;"></ul>
-      </div>
-    </div>
-
-    <div id="contentjournal">
-      <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> entering the yap zone</div>
-        <ul id="all-posts" reversed></ul>
-      </div>
-    </div>
-
-
-    <div id="footer">
-      <div id="footerbox">
-        <div id="footertext"></div>
-      </div>
-    </div>
-  </div>
-
-  <script src="/scripts/headerfooter.js"></script>
-	<script src="/scripts/journal.js"></script>
-</body>
-</html>
+<div class="right">
+    <!-- journal entries index -->
+     <section class="blue">
+        <h2>Now entering: the yap zone</h2>
+        <ul>
+            {% for entry in journalentries %}
+            <li>
+                <a href="/journal/posts/{{ entry.url }}">{{ entry.title }}</a>
+                <p class="subtletext">{{ entry.date }}</p>
+            </li>
+            {% endfor %}
+        </ul>
+     </section>
+</div>
